@@ -1,30 +1,27 @@
 package ru.kata.spring.boot_security.demo.service;
 
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.kata.spring.boot_security.demo.dao.UserDao;
-import ru.kata.spring.boot_security.demo.model.Role;
 import ru.kata.spring.boot_security.demo.model.User;
 
-import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class UserServiceImpl implements UserService {
 
-    private final PasswordEncoder encoder = new BCryptPasswordEncoder();
     private final UserDao userDao;
-    public UserServiceImpl(UserDao userDao) {
+    private final RoleService roleService;
+    private final PasswordEncoder encoder;
+
+    public UserServiceImpl(UserDao userDao, RoleService roleService, @Lazy PasswordEncoder encoder) {
         this.userDao = userDao;
+        this.roleService = roleService;
+        this.encoder = encoder;
     }
 
     @Override
@@ -36,13 +33,18 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public User getUserByUsername(String username) {
-        return userDao.getUserByUsername(username);
+    public User getUserByFirstName(String firstName) {
+        return userDao.getUserByFirstName(firstName);
+    }
+
+    @Override
+    public User getUserByEmail(String email) {
+        return userDao.getUserByEmail(email);
     }
 
     @Override
     public void addUser(User user) {
-        user.setPassword(encoder.encode(user.getPassword()));
+        prepareToUserBeforeSave(user);
         userDao.addUser(user);
     }
 
@@ -52,25 +54,13 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public User getUserById(int id) {
-        return userDao.getUserById(id);
-    }
-
-    @Override
     public void updateUserById(int id, User user) {
-        user.setPassword(encoder.encode(user.getPassword()));
+        prepareToUserBeforeSave(user);
         userDao.updateUserById(id, user);
     }
 
-    @Override
-    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = getUserByUsername(username);
-        return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(),
-                mapRolesToAuthorities(user.getRoles()));
-    }
-
-    private Collection<? extends GrantedAuthority> mapRolesToAuthorities(Collection<Role> roles) {
-        return roles.stream().map(r -> new SimpleGrantedAuthority(r.getName())).collect(Collectors.toList());
+    private void prepareToUserBeforeSave(User user) {
+        user.setRoles(user.getRoles().stream().map(role -> roleService.getRoleByName(role.getName())).toList());
+        user.setPassword(encoder.encode(user.getPassword()));
     }
 }
